static/css/index.css
#site-main {
    margin: auto;
}

.sidebar {
    background-color: #abd1d9;
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    width: 480px;
    padding-left: 60px;
    padding-right: 60px;
    padding-top: 60px;
}
.sidebar-name {
    text-align: center;
}
.sidebar-description {
    padding-top: 40px;
}
.sidebar-description .em {
    font-size: 22px;
    font-weight: 600;
}
.sidebar-description p {
    text-align: justify;
    color: #3d778c;
    font-size: 18px;
    line-height: 28px;
}
.sidebar-btns button a {
    color: #fff;
    font-weight: 600;
    text-decoration: none;
}
.sidebar-btns button {
    background-color: #3d778c;
    border-radius: 5px;
    padding: 5px 10px;
    margin-right: 15px;
    transition: 0.4s;
}
.sidebar-btns button:focus {
    outline: none;
}
.sidebar-btns button:hover {
    box-shadow: 0 0 12px rgba(0, 0, 0, 0.4);
    transition: 0.4s;
}
.sidebar-self {
    position: absolute;
    bottom: 0;
    width: 360px;
    z-index: -999;
}
.content {
    margin-left: 480px;
    padding: 80px 80px;
}

.site-header {
    margin-top: 60px;
}
.site-title {
    font-size: 48px;
}
.post-card {
    margin-bottom: 50px !important;
}
.post-card-text {
    margin-left: 30px !important;
}
.post-card-image-wrap {
    min-width: 200px;
}
.post-card-image-wrap img {
    transition: 0.5s ease;
}
.post-card-image-link:hover img {
    opacity: 0.5;
}
.post-card-image-link:hover .post-card-image-text {
    opacity: 1;
}
.post-card-image-text {
    position: absolute;
    top: 50%;
    width: 100%;
    text-align: center;
    text-shadow: 1px 0 8px rgba(0, 0, 0, 0.7);
    color: white;
    font-size: 22px;
    opacity: 0;
    transition: 0.5s ease;
}
.post-card-image-link {
    position: relative;
    width: 100%;
    display: block;
    background-color: #000;
    border-radius: 12px;
}
.post-card-image-link img {
    max-width: 100%;
    border-radius: 12px;
    box-shadow: 0 0 12px rgba(0, 0, 0, 0.125);
    transition: all ease-out 0.2s;
}

.post-card-image-link img:hover {
    box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
    transition: 0.5s ease;
}

.post-card-text {
    padding-left: 40px;
}
.post-card-text a {
    text-decoration: none;
}
.post-card-text a h2 {
    font-family: Bitter, serif;
    font-weight: 700;
    color: #dd8794;
}
.post-card-text h2 {
    margin-top: 0;
    margin-bottom: 30px;
    font-size: 26px;
}
.post-card-tags ul {
    margin: 0;
    padding: 0;
}
.post-card-tags li {
    padding-left: 0;
    text-decoration: none;
    list-style: none;
    font-size: 20px;
    line-height: 40px;
    color: #3d778c;
}

.site-wrapper {
    max-width: 90%;
    margin: 0 auto;
}

@media (min-width: 768px) {
    .site-wrapper {
        width: 85%;
    }
}
@media (min-width: 1024px) {
    .site-wrapper {
        width: 65%;
    }
}
@media (min-width: 1200px) {
    .site-wrapper {
        width: 55%;
    }
}

